# forge

./: .gitignore  Makefile.am  README  README.md  TODO.org  bootstrap.sh  build.rl  cio.h  configure  configure.ac  cpm.c  cpm.h  reset.sh
examples/: README
pkgs/: build.rl  gf.c  libcurl.c
src/: Makefile.am  bootstrap.rl  build.rl  colors.c  cpm.c  debug.rl  depgraph.c  flags.c  forge-autocomplete.sh  forge-debug-build  forge-main.c  forge.c  gen-api-header.rl  graph.c  main.c  malloc-nbytes@earl.c  matrix.c  msgs.c  str.c  utils.c  viewer.c
src/forge/: arg.h  array.h  chooser.h  cmd.h  colors.h  conf.h  cstr.h  ctrl.h  err.h  forge.h  io.h  lexer.h  logger.h  map.h  mem.h  pair.h  pkg.h  rdln.h  set.h  smap.h  str.h  test.h  trie.h  utils.h  viewer.h
src/forge-headers-src/: forge-arg.c  forge-chooser.c  forge-cmd.c  forge-colors.c  forge-cstr.c  forge-ctrl.c  forge-io.c  forge-lexer.c  forge-logger.c  forge-mem.c  forge-pkg.c  forge-rdln.c  forge-set.c  forge-smap.c  forge-str.c  forge-trie.c  forge-utils.c  forge-viewer.c
src/fviewer/: Makefile.am  context.c  fviewer  fviewer-context.c  fviewer-flags.c  fviewer-main.c  main.c
src/fviewer/include/: context.h  fviewer-context.h  fviewer-flags.h  fviewer-gl.h
src/include/: cio.h  clap.h  colors.h  cpm.h  depgraph.h  dyn_array.h  flags.h  forge.h  graph.h  matrix.h  msgs.h  paths.h  utils.h  viewer.h
src/include/ds/: array.h
src/include/forge/: array.h  cmd.h  io.h  pkg.h  str.h
src/pkgs/: AnimX.c  ampire.c  bless.c  bm.c  build.rl  camelCase_to_snake.c  earl.c  emacs.c  far.c  gf.c  gitcheck.c  libcurl.c  raylib.c
src/sqlite-autoconf-3500100/: jimsh0  sqlite3.pc  sqlite_cfg.h
src/t/: build.sh  forge-api-cmd-tests.c  forge-api-pkg-tests.c  forge-api-smap-tests.c  test.c  testapi.h
